# PrintBack

./: .gitattributes  .gitignore  LICENSE  README.md  sdkconfig.defaults
.githooks/: pre-commit
.github/workflows/: ci.yml
app/: pyproject.toml
app/printback/: __main__.py  config.py  i18n.py  maintenance.py  models.py  serial_reader.py  store.py  usb_reset.py
app/printback/ui/: debug_tab.py  main_window.py  stats_tab.py  theme.py  whitelist_panel.py
app/scripts/: run-as-admin.bat  run.bat  supervisor.py
docs/: ARCHITECTURE.md  DATA_MODEL.md  DECISIONS.md  LEARNINGS.md  PROGRESS.md  TASKS.md
docs/compliance/: README.md
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  aggregate.c  aggregate.h  app_info.h  ble_gatt.c  ble_gatt.h  fingerprint.c  fingerprint.h  kanon.c  kanon.h  main.c  output.c  runtime_config.c  runtime_config.h  runtime_config_parse.c  runtime_config_parse.h  sd_paths.c  sd_paths.h  sd_storage.c  sd_storage.h  tracker.c  tracker.h  ui.c  ui.h  whitelist.h  wifi_sniffer.c  wifi_sniffer.h  wl_auto.c  wl_auto.h
firmware/scripts/: README.md  dev_cycle.py
firmware/test_host/: README.md  run_tests.sh  test_kanon.c  test_runtime_config_parse.c  test_sd_paths.c  test_wl_auto.c
main/: CMakeLists.txt  Kconfig.projbuild  fingerprint.c  main.c  output.c  output.h  tracker.c  whitelist.c
mobile/: .gitignore  README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/linux/: CMakeLists.txt
mobile/test/: demo_data_test.dart  device_status_test.dart  excel_export_test.dart  insights_test.dart  (+6 more)
(+70 files in other folders)
