[project]
name = "printback"
version = "0.1.0"
description = "Desktop dashboard for the PrintBack WiFi footfall sniffer"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "pyqtgraph>=0.13",
    "pyserial>=3.5",
]

[project.scripts]
printback = "printback.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["printback"]
