idf_component_register(
    SRCS
        "main.c"
        "wifi_sniffer.c"
        "fingerprint.c"
        "tracker.c"
        "output.c"
        "whitelist.c"
        "ui.c"
        "kanon.c"
        "sd_paths.c"
        "sd_storage.c"
        "aggregate.c"
        "ble_gatt.c"
        "runtime_config_parse.c"
        "runtime_config.c"
        "wl_auto.c"
    INCLUDE_DIRS "."
    REQUIRES
        esp_wifi
        esp_event
        nvs_flash
        mbedtls
        esp_timer
        esp_app_format
        driver
        fatfs
        sdmmc
        esp_driver_sdspi
        bt
)
